# backend

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  b2_schema_summary.json  b2_schema_summary.md  b2_tabular_schema.json  b2_tabular_schema.md  docker-compose.yml  download_dem.py  dynamic_res_test.py  gis_catalog.json  grid.json  gt.sh  heatmap_sampler.py  machine-learning-plan.md  main.py  manifest.csv  pyproject.toml  regions.json  reproject_gis.py  requirements.txt  species.json  start_workflow.py
docker/: aliases.sh
docs/: agent_context.md  darwin_heatmap_improvement_plan.md  darwin_model_card.md  four_species_global_surface_model_card.md  index.md  inference_optimization_opportunities.md  ml_scripts.md  preprocess_processed_stage_notes.md  preprocessing_feature_transform_plan.md  training_observation_schema.md
frontend-demo/: index.html
schemas/: training_observation.schema.json
scripts/: analyze_toad_precip_expectation.py  annotate_quality_grade.py  bootstrap_data.py  build_biodiversity_richness.py  build_darwin_validity_mask.py  build_dem_regions.py  build_feature_table.py  build_four_species_global_surface.py  build_locations.py  build_overviews.py  build_regions.py  build_species_stats.py  build_temporal_rasters.py  check_occ_columns.py  data_catalog.json  derive_terrain.py  download_dem.py  download_landcover.py  download_observations.py  download_soil.py  download_temporal.py  enrich_temporal.py  enrich_tree.py  eval_reinforcement.py  export_b2_schema.py  extract_cutout.py  fetch_inat_descriptions.py  model_species_presence.py  (+30 more)
(+64 files in other folders)
