[project]
name = "wherewild"
version = "0.1.0"
description = "Wherewild python dependency management"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.0",
    "rasterio>=1.4.3",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "rapidfuzz>=3.9.0",
    "ruff>=0.14.4",
    "uvicorn>=0.38.0",
    "pyarrow>=17.0.0",
    "mkdocs-material>=9.7.1",
    "fastdigest>=0.1.3",
    "pillow>=10.4.0",
    "torch>=2.10.0",
]
